cleaned up medreminder code and fixed the nav bar on small screens

--- a/about.css
+++ b/about.css
@@ -72,7 +72,7 @@ a.highlight {
   padding: 50px 16px;
   text-decoration: none;
   font-size: 14px;
-  font-weight: 100;
+  font-weight: 500;
 }
 
 .topnav a:hover {
@@ -218,7 +218,7 @@ footer p {
 	}
 }
 
-@media only screen and (max-width: 808px) {
+@media only screen and (max-width: 825px) {
 	.topnav a:nth-child(n+2):nth-child(-n+6) {
 		display: none;
 	}
