--- a/main.css
+++ b/main.css
@@ -101,7 +101,7 @@ a.highlight {
   padding: 50px 16px;
   text-decoration: none;
   font-size: 14px;
-  font-weight: 100;
+  font-weight: 500;
 }
 
 .topnav a:hover {
@@ -210,6 +210,9 @@ footer p {
 	color: #333;
 	font-size: 12px;
 }
+.foot {
+	color: #333;
+}
 
 /*----------------------responsive----------------------*/
 @media only screen and (max-width: 991px) {
@@ -226,7 +229,7 @@ footer p {
 	}
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 825px) {
 	.topnav a:nth-child(n+2):nth-child(-n+6) {
 		display: none;
 	}
