--- a/project.css
+++ b/project.css
@@ -76,7 +76,7 @@ a:hover {
   padding: 50px 16px;
   text-decoration: none;
   font-size: 14px;
-  font-weight: 100;
+  font-weight: 500;
 }
 
 .topnav a:hover {
@@ -155,9 +155,9 @@ img {
 	color: #b5b5b5;
 }*/
 
-.main-text p {
+/*.main-text p {
 	font-size: 16px;
-}
+}*/
 
 .page-break {
 	padding: 30px 0px 30px 0px;
@@ -251,7 +251,7 @@ footer p {
 	}
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 825px) {
 	.topnav a:nth-child(n+2):nth-child(-n+6) {
 		display: none;
 	}
